--- a/configclient.yml
+++ b/configclient.yml
@@ -1,4 +1,4 @@
 ---
 wordConfig:
-  lucky-word: rejo
-  preamble: La palabra de la suerte es=
+  lucky-word: rejogonz
+  preamble: La palabra de la suerte es =
