--- a/configclient.yml
+++ b/configclient.yml
@@ -1,4 +1,4 @@
 ---
 wordConfig:
   lucky-word: Master of Puppets
-  preamble: La palabra de la suerte es =
+  preamble: La frease de la suerte es =
